# intdet

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  create-archive.sh  packages.switch  setup.sh
src/: _CoqProject  dune  noaxioms.v
src/angelic/: adequacy.v  run.v  trees.v
src/examples/: counter.v  dedup.v  dedup_seq.v  dumas.v  fill.v  fill_seq.v  filter_compact.v  filter_compact_seq.v  hashtbl.v  hashtbl_pure.v  hashtbl_seq.v  parfor.v  parfor_seq.v  priority.v  reference.v  tactics.v  tactics_triple.v
src/lang/: atomic.v  head_semantics.v  invert_step.v  locations.v  notations.v  reducible.v  semantics.v  substitution2.v  syntax.v  syntax_instances.v  utils.v
src/musketeer/: adequacy.v  atomic_wpg.v  dwp.v  dwp_adequacy.v  ininj.v  lockstep.v  wpapi.v  wpg.v
src/types/: persistent_pred.v  utils.v
src/types/affine/: fundamental.v  fundamental_array.v  fundamental_hashtbl.v  fundamental_parfor.v  fundamental_prods.v  logrel.v  logrel_facts.v  op_related.v  shape.v  soundness.v  syntactical.v  typing.v
src/types/lvar/: code.v  fundamental.v  logrel.v  soundness.v  typing.v
src/utils/: big_opN.v  elems.v  graph.v  more_cmras.v  more_iris.v  more_maps_and_sets.v  restrict.v
