(coq.theory
 (name intdet)
 (synopsis "All for One and One for All: Program Logics for Exploiting Internal Determinism in Parallel Programs")
 (modules :standard \ noaxioms)
 ; TODO use :standard, when achieving to a stable development
 (flags -w -implicits-in-term,-redundant-canonical-projection,-ambiguous-paths,-implicit-core-hint-db,-custom-entry-overridden,-deprecated-hint-without-locality,-deprecated-ident-entry,-deprecated-hint-rewrite-without-locality,-deprecated-instance-without-locality,-notation-overridden)
 (theories stdpp iris Ltac2)
)

(include_subdirs qualified)
